--- a/pages/markdown/markdown.wxml
+++ b/pages/markdown/markdown.wxml
@@ -1,17 +1,15 @@
-<view class="markdown-body">
-  <block wx:for="{{ markdown.renderList }}" wx:key="blockIndex" wx:for-index="blockIndex" wx:for-item="block">
+<view class="markdown-container">
+  <block wx:for="{{ markdown.renderList }}" wx:for-index="blockIndex" wx:for-item="block">
     <view class="{{ block.type }} block">
-      <block wx:if="{{ block.content.push }}" wx:for="{{ block.content }}" wx:key="inlineIndex" wx:for-index="inlineIndex" wx:for-item="inline">
+      <block wx:for="{{ block.content }}" wx:for-index="inlineIndex" wx:for-item="inline">
         <text selectable="true" class="{{ inline.type }} inline" wx:if="{{ inline.type === 'text' || inline.type === 'code' || inline.type === 'strong' || inline.type === 'deleted' || inline.type === 'em' || inline.type === 'th' || inline.type === 'td' }}">{{ inline.content }}</text>
         <text selectable="true" class="a inline" wx:if="{{ inline.type === 'a' }}" catchtap="parseLink" data-url="{{ inline.href }}">{{ inline.content }}</text>
         <image mode="widthFix" class="img" src="{{ inline.src }}" wx:if="{{ inline.type === 'image' }}"
-               catchtap="viewimg" data-current="{{ inline.src }}" style="{{ inline.style }}" bindload="adjustImage" data-block-index="{{ blockIndex }}" data-inline-index="{{ inlineIndex }}" catchlongpress="onImageLongTap"></image>
+        catchtap="viewimg" data-current="{{ inline.src }}" style="{{ inline.style }}" bindload="adjustImage" data-block-index="{{ blockIndex }}" data-inline-index="{{ inlineIndex }}" catchlongpress="onImageLongTap"></image>
       </block>
-      <block wx:if="{{ !block.content.push }}">
-        <view wx:if="{{ block.type === 'code' }}">{{ block.content }}</view>
-        <video wx:if="{{ block.type == 'video' }}" class="wemark_block_video" src="{{ block.src }}"
-               poster="{{ block.poster }}" controls></video>
-      </block>
+      <view wx:if="{{ block.type === 'code' }}">{{ block.content }}</view>
+      <video wx:if="{{ block.type == 'video' }}" class="wemark_block_video" src="{{ block.src }}"
+             poster="{{ block.poster }}" controls></video>
     </view>
   </block>
 </view>
