--- a/components/jwc/jwc.wxml
+++ b/components/jwc/jwc.wxml
@@ -2,12 +2,12 @@
   <image class="icon" src="/images/ic_jwc.png" mode="aspectFit"/>
   <swiper wx:if="{{ !$jwc_showAll }}" autoplay="true" duration="300" circular="true" vertical="true">
     <swiper-item wx:for="{{ $jwc }}" wx:key="href" catchtap="open" data-url="{{ item.href }}">
-      <text class="content singleline">{{ item.title }}</text>
+      <text class="content singleline {{ item.isImportant ? 'important' : '' }}">{{ item.title }}</text>
     </swiper-item>
   </swiper>
   <view class="vertical" wx:if="{{ $jwc_showAll }}">
     <view wx:for="{{ $jwc }}" wx:key="href">
-      <text class="content" catchtap="open" data-url="{{ item.href }}">{{ item.title }}</text>
+      <text class="content {{ item.isImportant ? 'important' : '' }}" catchtap="open" data-url="{{ item.href }}">{{ item.title }}</text>
     </view>
     <text class="hint">本公告条仅显示教务处【教务信息】版块，为了不错过其它重要信息，另请关注教务处官网以及您的学院官网。</text>
   </view>
