--- a/components/service/service.wxml
+++ b/components/service/service.wxml
@@ -5,18 +5,7 @@
       <text>广播站</text>
       <space/>
     </view>
-    <swiper wx:if="{{ $service.messages.length > 1 }}" autoplay="true" duration="300" circular="true">
-      <swiper-item wx:for="{{ $service.messages }}" wx:key="content" class="content {{ item.url ? 'selectable': '' }}"
-                   catchtap="open"
-                   data-url="{{ item.url }}">
-        <image src="{{ item.image }}" wx:if="{{ item.image }}" mode="aspectFill"/>
-        <view class="vertical">
-          <text class="title" wx:if="{{ item.title }}">{{ item.title }}</text>
-          <text>{{ item.content }}</text>
-        </view>
-      </swiper-item>
-    </swiper>
-    <view wx:if="{{ $service.messages.length == 1 }}" wx:for="{{ $service.messages }}" wx:key="content"
+    <view wx:for="{{ $service.messages }}" wx:key="content"
           class="content {{ item.url ? 'selectable': '' }}" catchtap="open" data-url="{{ item.url }}">
       <image src="{{ item.image }}" wx:if="{{ item.image }}" mode="aspectFill"/>
       <view class="vertical">
