--- a/pages/cardCharge/cardCharge.wxss
+++ b/pages/cardCharge/cardCharge.wxss
@@ -15,40 +15,43 @@
 
 .greeting {
   display: block;
-  padding: 25rpx 30rpx;
+  padding: 30rpx 30rpx;
   font-size: 28rpx;
-  color: #666;
+  color: #999;
   text-align: left;
+  border-top: 20rpx solid #f8f8f8;
 }
 
 .charge {
-  padding: 30rpx 30rpx 0;
+  padding: 70rpx 30rpx 30rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
 
 .charge line {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-bottom: 20rpx;
-  height: 50rpx;
+  justify-content: center;
+  padding: 10rpx 0;
 }
 
-.charge line .row-name {
-  font-size: 28rpx;
+.charge line .hint {
   color: #666;
-  display: block;
-  text-align: left;
-  flex-grow: 1;
+  font-size: 28rpx;
+  margin-right: 20rpx;
 }
 
-.charge line input {
-  margin-left: 30rpx;
-  width: 400rpx;
-  border-bottom: 1rpx solid #eee;
-  text-align: right;
+.charge input {
+  width: 480rpx;
+  text-align: center;
   font-size: 28rpx;
-  color: #666;
-  -webkit-transition: .3s;
+  line-height: 44rpx;
+  padding: 20rpx 25rpx;
+  background: #fafafa;
+  border-radius: 10rpx;
+  margin-top: 10rpx;
 }
 
 .charge line .content {
@@ -57,6 +60,7 @@
   text-align: right;
   font-size: 28rpx;
   color: #666;
+  transition: .3s;
   -webkit-transition: .3s;
 }
 
@@ -68,39 +72,50 @@ line.amount {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 40rpx 0 20rpx;
+  margin: 40rpx 30rpx 0;
+  height: 60rpx;
 }
 
 line.amount input {
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  height: 60rpx;
   line-height: 50rpx;
   color: #333;
   font-size: 28rpx;
   flex-grow: 1;
-  text-align: right;
-  width: auto;
+  border-radius: 8rpx;
+  background: #f8f8f8;
+  border: none;
+  outline: none;
 }
 
 line.amount button {
-  line-height: 50rpx;
-  padding: 4rpx 20rpx;
+  margin: 0 10rpx 0 0;
+  padding: 0 20rpx;
+  width: auto;
+  height: 60rpx;
+  display: block;
+  line-height: 60rpx;
   border-radius: 8rpx;
   background: #f8f8f8;
   color: #333;
   font-size: 28rpx;
-  margin: 15rpx 5rpx 15rpx 0;
+  transition: .3s;
   -webkit-transition: .3s;
   flex-shrink: 0;
 }
 
 line.amount button:active,
-line.amount button.selected {
+line.amount button.selected,
+line.amount input.selected,
+line.amount input.selected .input-placeholder {
   color: #fff;
   background: #3688ff;
+  transition: .1s;
   -webkit-transition: .1s;
-}
-
-line.amount input.selected {
-  border-bottom: 3rpx solid #3688ff;
 }
 
 line.amount text {
@@ -118,11 +133,13 @@ button.submit {
   font-weight: normal;
   background: #3688ff;
   border-radius: 8rpx;
+  transition: .3s;
   -webkit-transition: .3s;
 }
 
 button.submit:active {
-  background: #00556a;
+  filter: brightness(0.8);
+  -webkit-filter: brightness(0.8);
 }
 
 button.submit.disabled {
