--- a/app.wxss
+++ b/app.wxss
@@ -7,6 +7,17 @@ page {
   overflow-x: hidden;
 }
 
+tab-shadow {
+  position: fixed;
+  bottom: -99rpx;
+  left: 0;
+  right: 0;
+  height: 100rpx;
+  border-top: 1rpx solid #eee;
+  z-index: 9999999;
+  box-shadow: 0 0 30rpx rgba(0, 0, 0, .05);
+} 
+
 text {
   cursor: default;
   line-height: 1.45em;
