--- a/components/jwc/jwc.wxml
+++ b/components/jwc/jwc.wxml
@@ -1,14 +1,19 @@
-<jwc wx:if="{{ $jwc.length }}" class="{{ $jwc_showAll ? 'all' : '' }}" catchtap="$jwc_toggleShowAll">
-  <image class="icon" src="/images/ic_jwc.png" mode="aspectFit"/>
-  <swiper wx:if="{{ !$jwc_showAll }}" autoplay="true" duration="300" circular="true" vertical="true">
-    <swiper-item wx:for="{{ $jwc }}" wx:key="href" catchtap="open" data-url="{{ item.href }}">
-      <text class="content singleline {{ item.isImportant ? 'important' : '' }}">{{ item.title }}</text>
-    </swiper-item>
-  </swiper>
-  <view class="vertical" wx:if="{{ $jwc_showAll }}">
-    <view wx:for="{{ $jwc }}" wx:key="href">
-      <text class="content {{ item.isImportant ? 'important' : '' }}" catchtap="open" data-url="{{ item.href }}">{{ item.title }}</text>
+<jwc>
+  <view class="subtitle">
+    <image src="/images/ic_jwc.png" mode="aspectFit"/>
+    <text>教务通知</text>
+    <space/>
+  </view>
+  <view wx:for="{{ $jwc }}" wx:key="href" class="content" catchtap="open" data-url="{{ item.href }}">
+    <text class="title">{{ item.title }}</text>
+    <view class="horizontal">
+      <text class="tag urgent" wx:if="{{ item.isUrgent }}">紧急</text>
+      <text class="tag important" wx:if="{{ item.isImportant }}">重要</text>
+      <text class="tag announcement" wx:if="{{ item.isAnnouncement }}">公示</text>
+      <text class="tag lecture" wx:if="{{ item.isLecture }}">讲座</text>
+      <text class="tag competition" wx:if="{{ item.isCompetition }}">竞赛</text>
+      <text class="tag">{{ item.category }}</text>
+      <text>发布于{{ item.displayDate }}</text>
     </view>
-    <text class="hint">本公告条仅显示教务处【教务信息】版块，为了不错过其它重要信息，另请关注教务处官网以及您的学院官网。</text>
   </view>
 </jwc>
