--- a/components/schedule/schedule.wxml
+++ b/components/schedule/schedule.wxml
@@ -12,32 +12,24 @@
   <button class="loading" wx:if="{{ $schedule_loading }}" loading="true">正在获取日程信息 ({{ $schedule_loading }})
   </button>
   <text wx:if="{{ !$schedule_loading && !$schedule.length }}" class="empty-hint">本周暂无课表 / 实验 / 考试安排</text>
-  <swiper wx:for="{{ $schedule }}" wx:key="id" autoplay="{{ false }}" circular="{{ false }}" duration="300"
-          bindchange="$schedule_delete" data-id="{{ item.id }}" class="{{ item.deleted ? 'deleted' : '' }}">
-    <swiper-item>
-      <item>
-        <image class="schedule-avatar dot"
-               style="background: {{ item.displayData.color }}" mode="aspectFill"/>
-        <view class="schedule-desc">
-          <view class="line top-line">
-            <text class="bottom-left singleline">{{ item.displayData.period }}</text>
-            <text class="bottom-right singleline">{{ item.type }}</text>
-          </view>
-          <view class="line">
-            <text class="top-left singleline">{{ item.displayData.topLeft }}</text>
-            <text wx:if="{{ item.displayData.goingOn }}" class="top-right singleline going-on">进行中</text>
-            <text wx:if="{{ item.displayData.expired }}" class="top-right singleline expired">已过期</text>
-          </view>
-          <view class="line">
-            <text class="bottom-left singleline">{{ item.displayData.bottomLeft }}</text>
-            <text class="bottom-right singleline">{{ item.displayData.bottomRight }}</text>
-          </view>
-        </view>
-      </item>
-    </swiper-item>
-    <swiper-item class="delete" wx:if="{{ item.typeId === 'custom' }}">
-      删除日程
-    </swiper-item>
-  </swiper>
+  <item wx:for="{{ $schedule }}" wx:key="id">
+    <image class="schedule-avatar dot"
+            style="background: {{ item.displayData.color }}" mode="aspectFill"/>
+    <view class="schedule-desc">
+      <view class="line top-line">
+        <text class="bottom-left singleline">{{ item.displayData.period }}</text>
+        <text class="bottom-right singleline">{{ item.type }}</text>
+      </view>
+      <view class="line">
+        <text class="top-left singleline">{{ item.displayData.topLeft }}</text>
+        <text wx:if="{{ item.displayData.goingOn }}" class="top-right singleline going-on">进行中</text>
+        <text wx:if="{{ item.displayData.expired }}" class="top-right singleline expired">已过期</text>
+      </view>
+      <view class="line">
+        <text class="bottom-left singleline">{{ item.displayData.bottomLeft }}</text>
+        <text class="bottom-right singleline">{{ item.displayData.bottomRight }}</text>
+      </view>
+    </view>
+  </item>
   <!-- <fab></fab> -->
 </schedule>
