--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,12 +7,9 @@
   <block wx:elif="{{ $service.serverHealth !== false }}">
     <include src="/components/avatar/avatar.wxml"/>
     <include src="/components/dashboard/dashboard.wxml"/>
-    <include src="/components/jwc/jwc.wxml"/>
-    <include src="/components/service/service.wxml"/> 
   </block>
   <block wx:else>
     <include src="/components/server_down/server_down.wxml"/>
-    <include src="/components/service/service.wxml"/> 
   </block>
 
   <include src="/components/schedule/schedule.wxml"/>
@@ -22,3 +19,4 @@
   <include wx:if="{{ $service.serverHealth }}" src="/components/login/login.wxml"/>
   <include wx:else src="/components/server_down/server_down.wxml"/>
 </block>
+<tab-shadow/>
