--- a/app.wxss
+++ b/app.wxss
@@ -9,13 +9,11 @@ page {
 
 tab-shadow {
   position: fixed;
-  bottom: -99rpx;
+  bottom: 0;
   left: 0;
   right: 0;
-  height: 100rpx;
+  height: 0;
   border-top: 1rpx solid #eee;
-  z-index: 9999999;
-  box-shadow: 0 0 30rpx rgba(0, 0, 0, .05);
 } 
 
 text {
