--- a/pages/notices/notices.wxml
+++ b/pages/notices/notices.wxml
@@ -1,3 +1,6 @@
+<include src="/components/plainui/magic_shadow.wxml"/>
 <include src="/components/service/service.wxml"/>
+<include src="/components/plainui/divider.wxml"/>
 <include src="/components/jwc/jwc.wxml"/>
+<include src="/components/plainui/magic_shadow.wxml"/>
 <tab-shadow/>
